# airsim

./: .gitignore  CMakeLists.txt
assets/vaccine/: SARS_CoV_2_Vaccine.mtl
src/: airsim.cpp  airsim.h  object.cpp  object.h
